<resources>
    <string name="app_name">Calculator</string>
    <string name="c_button_title">C</string>
    <string name="delete_button_title">Del</string>
    <string name="divide_button_title">/</string>
    <string name="digit_seven_button_title">7</string>
    <string name="digit_eight_button_title">8</string>
    <string name="digit_nine_button_title">9</string>
    <string name="multiply_button_title">*</string>
    <string name="digit_four_button_title">4</string>
    <string name="digit_five_button_title">5</string>
    <string name="digit_six_button_title">6</string>
    <string name="add_button_title">+</string>
    <string name="digit_one_button_title">1</string>
    <string name="digit_two_button_title">2</string>
    <string name="digit_three_button_title">3</string>
    <string name="minus_button_title">-</string>
    <string name="digit_zero_button_title">0</string>
    <string name="point_button_title">.</string>
    <string name="equal_button_title">=</string>
</resources>