<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color_main"
    android:stretchColumns="0,1,2,3"
    tools:context=".MainActivity">

    <TableRow
        android:layout_marginTop="@dimen/margin_top_main_activity_table_row1"
        android:layout_weight="1">

        <TextView
            android:id="@+id/calculator_screen_text_view"
            android:layout_span="4"
            android:background="?attr/background_text_view"
            android:gravity="bottom|end"
            android:singleLine="true"
            android:textColor="?attr/text_color_text_view"
            android:textSize="@dimen/calc_text_size_text_view" />
    </TableRow>

    <TableRow>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme_button"
            android:layout_column="3" />
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/margin_top_main_activity_table_row2"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clean_button"
            style="@style/OrangeButtons"
            android:text="@string/c_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            style="@style/WhiteButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:layout_span="2"
            android:text="@string/delete_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divide_button"
            style="@style/BlueButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/divide_button_title" />
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/margin_top_between_rows_of_buttons"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_seven_button"
            style="@style/WhiteButtons"
            android:text="@string/digit_seven_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_eight_button"
            style="@style/WhiteButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/digit_eight_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_nine_button"
            style="@style/WhiteButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/digit_nine_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply_button"
            style="@style/BlueButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/multiply_button_title" />
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/margin_top_between_rows_of_buttons"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_four_button"
            style="@style/WhiteButtons"
            android:text="@string/digit_four_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_five_button"
            style="@style/WhiteButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/digit_five_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_six_button"
            style="@style/WhiteButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/digit_six_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            style="@style/BlueButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/add_button_title" />
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/margin_top_between_rows_of_buttons"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_one_button"
            style="@style/WhiteButtons"
            android:text="@string/digit_one_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_two_button"
            style="@style/WhiteButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/digit_two_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_three_button"
            style="@style/WhiteButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/digit_three_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus_button"
            style="@style/BlueButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/minus_button_title" />
    </TableRow>


    <TableRow
        android:layout_marginTop="@dimen/margin_top_between_rows_of_buttons"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/digit_zero_button"
            style="@style/WhiteButtons"
            android:layout_span="2"
            android:text="@string/digit_zero_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/point_button"
            style="@style/WhiteButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/point_button_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equal_button"
            style="@style/BlueButtons"
            android:layout_marginStart="@dimen/margin_start_button"
            android:text="@string/equal_button_title" />
    </TableRow>

</TableLayout>